fix bgc in dark mode

--- a/src/.vuepress/theme/client/styles/_colors.scss
+++ b/src/.vuepress/theme/client/styles/_colors.scss
@@ -1,4 +1,9 @@
 @layer base {
+  :root,
+  html.dark {
+    --c-bg: inherit;
+  }
+
   //noinspection CssInvalidPropertyValue
   html {
     @apply bg-white;
